# federalDOE-data-challenge

./: .dockerignore  .gitignore  README.md  docker-compose.yml  schema.sql
data/: summary_output_extra.json
images/solution/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
images/solution/src/codetest/: main.py
images/solution/src/codetest/db/: database.py
images/solution/src/codetest/db/models/: people.py  places.py
images/solution/src/codetest/utils/: io_utils.py  log_utils.py
images/solution/tests/e2e/: test_codetest.py
images/solution/tests/integration/: test_db_models_data.py  test_db_query.py
images/solution/tests/unit/: test_db.py  test_db_models.py  test_summary_calcs.py
